--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "element-plus": "^1.0.1-beta.20",
     "normalize.css": "^8.0.1",
     "vue": "^3.0.0",
-    "vue-router": "^4.0.2"
+    "vue-router": "^4.0.2",
+    "vuex": "^4.0.0-rc.2"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^2.33.0",
